--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=ac224225d5416bfbaf9b",
+    "/css/app.css": "/css/app.css?id=4b25d3ec6defdea67341"
 }
