--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,12 @@
         "guzzlehttp/guzzle": "~6.3",
         "jxlwqq/simditor": "^1.0",
         "laravel/framework": "^7.29",
+        "laravel/horizon": "~4.3",
         "laravel/tinker": "^2.5",
         "mews/purifier": "~3.0",
         "overtrue/laravel-lang": "~3.0",
         "overtrue/pinyin": "~4.0",
+        "predis/predis": "~1.1",
         "summerblue/laravel-active": "7.*"
     },
     "require-dev": {
