--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/framework": "^7.29",
         "laravel/horizon": "~4.3",
         "laravel/tinker": "^2.5",
+        "mews/captcha": "~3.0",
         "mews/purifier": "~3.0",
         "overtrue/laravel-lang": "~3.0",
         "overtrue/pinyin": "~4.0",
