--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "encore/laravel-admin": "1.8.0",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
+        "gregwar/captcha": "^1.1",
         "guzzlehttp/guzzle": "~6.3",
         "jxlwqq/simditor": "^1.0",
         "laravel/framework": "^7.29",
