--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "overtrue/pinyin": "~4.0",
         "predis/predis": "~1.1",
         "summerblue/laravel-active": "7.*",
+        "tymon/jwt-auth": "^1.0",
         "viacreative/sudo-su": "~1.1"
     },
     "require-dev": {
