--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "overtrue/laravel-socialite": "~2.0",
         "overtrue/pinyin": "~4.0",
         "predis/predis": "~1.1",
+        "spatie/laravel-query-builder": "^3.3",
         "summerblue/laravel-active": "7.*",
         "tymon/jwt-auth": "^1.0",
         "viacreative/sudo-su": "~1.1"
@@ -37,6 +38,7 @@
         "laravel/ui": "^2.0",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.3",
+        "overtrue/laravel-query-logger": "^2.1",
         "phpunit/phpunit": "^8.5.8|^9.3.3",
         "summerblue/generator": "7.*"
     },
